@@ -11,8 +11,8 @@
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
-  <property name="default_width">650</property>
-  <property name="default_height">550</property>
+  <property name="default_width">700</property>
+  <property name="default_height">580</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
   <property name="decorated">True</property>
@@ -480,12 +480,12 @@
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
 		      <property name="climb_rate">1</property>
-		      <property name="digits">0</property>
+		      <property name="digits">1</property>
 		      <property name="numeric">False</property>
 		      <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 		      <property name="snap_to_ticks">False</property>
 		      <property name="wrap">False</property>
-		      <property name="adjustment">60 40 250 1 10 10</property>
+		      <property name="adjustment">60 40 250 0.10000000149 1 1</property>
 		      <signal name="value_changed" handler="on_spinbutton_weight_value_changed" last_modification_time="Fri, 09 Sep 2005 14:22:24 GMT"/>
 		    </widget>
 		    <packing>
