@@ -1,7 +1,10 @@
 2005-09- 0.2-1 Samuel Abels <spam debain org>
+	* Made the "Weight" spin button entry box allow float numbers.
+	* Improved installer.
+	* Correctly register application/x-shrinkingman MIME-type.
 	* Automatically load the last opened file on startup.
 	* Changed column order.
-	* Made the "Quantity" spin button entry allow float numbers.
+	* Made the "Quantity" spin button entry box allow float numbers.
 	* Added a .desktop file.
 	* Implemented cut & paste operations and added "Edit" menu.
 	* Added navigation toolbuttons for the calendar.
